# rust_websocket

./: Cargo.toml
migrations/2023-01-12-024146_create_account/: up.sql
migrations/2023-01-12-025615_create_account/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/models/: account.rs  mod.rs  response.rs
src/services/: account_service.rs
