[package]
name = "rust_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utils
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pwhash = "1" # Used for hash password
#jsonwebtoken = "8.2.0" # Used for creating JWT

# Web
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2"}

# Database
diesel = { version = "2.0.1", features = ["postgres", "r2d2", "chrono"] }
postgresql = "0.1.1"